apps/tencentcloud/prow-worker/policies/tests/inject-prow-tencent-cost-tags/patched-periodic-missing-base-ref.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    eks.tke.cloud.tencent.com/eks-id: "true"
    eks.tke.cloud.tencent.com/resource-tag: '{"org":"pingcap","repo":"tidb"}'
  labels:
    created-by-prow: "true"
    org: pingcap
    prow.k8s.io/refs.org: pingcap
    prow.k8s.io/refs.repo: tidb
    repo: tidb
  name: prow-periodic-missing-base-ref
  namespace: prow-test-pods
spec:
  containers:
    - image: busybox:1.36
      name: test
