apps/tencentcloud/prow-worker/policies/tests/inject-prow-tencent-cost-tags/resource-missing-repo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prow-missing-repo
  namespace: prow-test-pods
  labels:
    created-by-prow: "true"
    prow.k8s.io/refs.author: alice
    prow.k8s.io/refs.org: pingcap
spec:
  containers:
    - name: test
      image: busybox:1.36
