apps/tencentcloud/prow-worker/policies/tests/inject-prow-tencent-cost-tags/resource-non-prow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-prow
  namespace: prow-test-pods
  labels:
    prow.k8s.io/refs.author: alice
    prow.k8s.io/refs.org: pingcap
    prow.k8s.io/refs.repo: tidb
spec:
  containers:
    - name: test
      image: busybox:1.36
