apps/tencentcloud/prow-worker/policies/tests/inject-prow-tencent-cost-tags/resource-periodic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prow-periodic
  namespace: prow-test-pods
  labels:
    created-by-prow: "true"
    prow.k8s.io/refs.base_ref: master
    prow.k8s.io/refs.org: pingcap
    prow.k8s.io/refs.repo: tidb
spec:
  containers:
    - name: test
      image: busybox:1.36
