apps/tencentcloud/prow-worker/policies/tests/inject-prow-tencent-cost-tags/resource-presubmit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prow-presubmit
  namespace: prow-test-pods
  annotations:
    prow.k8s.io/job: pull-tidb-test
  labels:
    created-by-prow: "true"
    prow.k8s.io/refs.author: alice
    prow.k8s.io/refs.base_ref: master
    prow.k8s.io/refs.org: pingcap
    prow.k8s.io/refs.repo: tidb
spec:
  containers:
    - name: test
      image: busybox:1.36
